:sparkles: feat: Adding Q&A FAQ to the project.

--- a/index.html
+++ b/index.html
@@ -96,6 +96,57 @@
             <h4>Conclusão</h4>
             <p>No geral, os cursos de manicure online se destacam porque você tem a chance de aprender não apenas em uma aula, mas quantas quiser a partir dos ensinamentos e técnicas passados pelas instrutoras. Assim, se você deseja aprender sobre designer de unhas online, não faltam opções. Desta forma, então esperamos de coração que este artigo tenha ajudado você a descobrir qual curso online de manicure e designer de unhas é o ideal para você!</p>
         </section>
+
+        <section>
+            <h5>Perguntas Frequentes</h5>
+            
+            <div class="faq">
+                <details>
+                    <summary>Como encontro o melhor curso de manicure online?</summary>
+                    <div class="faq-details">
+                        <p>Pesquisamos, vasculhamos a internet e encontramos a lista dos seis melhores cursos de manicure online. Agora, a questão é: o que nos fez selecionar esses cursos de manicure online em relação aos outros?</p>
+                        <p>Então, inicialmente, com base em nossa pesquisa, escolhemos as 12 melhores cursos de manicure online. Esses cursos foram selecionados em quatro parâmetros: As ofertas de cursos; O valor investido; A experiência da instrutora e as classificações e comentários do curso.</p>
+                        <p>Em seguida, contatamos as principais especialistas do setor e as apresentamos com esses cursos. Eles revisaram esses cursos online individuais de manicure, usaram sua experiência e compreensão e, finalmente, nos deram esses 6 melhores cursos online de manicure.</p>
+                    </div>
+                </details>
+                <details>
+                    <summary>Esses cursos são adequados para mim?</summary>
+                    <div class="faq-details">
+                        <p>Esta é uma das melhores lista de cursos de manicure online e vem com diferentes níveis de dificuldade. Então, isso a torna ótima para novas aspirantes a manicures e até mesmo para as já estabelecidas.</p>
+                    </div>
+                </details>
+                <details>
+                    <summary>Qual o valor de um curso de manicure?</summary>
+                    <div class="faq-details">
+                        <p>É evidente que os preços variam de acordo com o conteúdo do curso, duração, instrutor, etc. Mas, no geral, os cursos individuais aqui listados variam em apenas R$ 35,00 enquanto os cursos mais longos vão até R$ 100,00 a vista.</p>
+                    </div>
+                </details>
+                <details>
+                    <summary>O que vou precisar para aprender com esses cursos?</summary>
+                    <div class="faq-details">
+                        <p>Além da vontade de aprender algo novo, nestes cursos, as especialistas do setor ensinarão tudo o que você precisa saber para se tornar uma técnica de unhas. Aprender com estes cursos irá ajudá-la a crescer no negócio da beleza, a demanda pormanicures está em toda parte. Então, se você deseja expandir sua carreira, estes são os cursos perfeitos.</p>
+                    </div>
+                </details>
+                <details>
+                    <summary>Os cursos tem garantia?</summary>
+                    <div class="faq-details">
+                        <p>Sim, todos os cursos possuem no mínimo 7 dias de total garantia. Se por algum motivo você não gostar do conteúdo apresentado ou achar que não é pra você, os produtores devolvem o seu dinheiro.</p>
+                    </div>
+                </details>
+                <details>
+                    <summary>Os cursos oferecem suporte para as alunas?</summary>
+                    <div class="faq-details">
+                        <p>Sim! Todos os cursos listados oferecem uma otíma equipe de suporte para qualquer dúvida que você possa ter durante o seu aprendizado.</p>
+                    </div>
+                </details>
+                <details>
+                    <summary>Quanto tempo demora o curso de manicure e pedicure?</summary>
+                    <div class="faq-details">
+                        <p>Os cursos nesta revisão variam de uma a várias semanas de conteúdo! No entanto, vale lembrar que todos esses cursos são únicos em seu foco, habilidades e objetivos de aprendizagem. Portanto, não há tempo definido para aprender sobre como ser uma manicure - depende do tempo que você está disposta a oferecer. E, claro, você tem que considerar o tempo para praticar. Além disso, a vantagem desses cursos serem online é que você pode assisti-los novamente quantas vezes quiser.</p>
+                    </div>
+                </details>
+            </div>
+        </section>
     </main>
     <footer>
         <p>© 2022. comoserumamanicure.com.br. Todos os direitos reservados.</p>
