:sparkles: feat: Adding sidebar menu.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,16 @@
 </head>
 <body>
     <header>
+        <button id="menu-toggle" aria-label="Abrir Menu">&#9776;</button>
+        
+        <nav id="sidebar-menu">
+        <ul>
+                <li><a href="#">Cursos</a></li>
+                <li><a href="#">Vantagens</a></li>
+                <li><a href="#">Perguntas Frequentes</a></li>
+            </ul>
+        </nav>
+
         <div class="left">
             <h1>Os Melhores Cursos de Manicure Online</h1>
             <p>Se você deseja aprender as habilidades necessárias para ser uma ótima manicure, esta revisão dos melhores cursos online de manicure e pedicure de 2024 é para você.</p>
@@ -151,5 +161,6 @@
     <footer>
         <p>© 2022. comoserumamanicure.com.br. Todos os direitos reservados.</p>
     </footer>
+    <script src="./js/scripts.js"></script>
 </body>
 </html>
