:sparkles: feat: Adding automatic current date to project.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <li>Todos os cursos oferecem uma plataforma de compra segura.</li>
         </ul>
 
-        <p>Última atualização: 09/2024</p>
+        <p id="mes-ano-frase"></p>
 
         <section id="cursos" class="courses">
             <h3>Curso de Manicure e Pedicure para Iniciantes com Faby Cardoso</h3>
@@ -481,7 +481,7 @@
         </section>
     </main>
     <footer>
-        <p>© 2022. comoserumamanicure.com.br. Todos os direitos reservados.</p>
+        <p>© <span id="ano-frase"></span>. melhorescursosdemanicureonline.vercel.app. Todos os direitos reservados.</p>
     </footer>
     <script src="./js/scripts.js"></script>
 </body>
