:sparkles: feat: Adding a top menu for resolutions larger than 1024px to the project.

--- a/index.html
+++ b/index.html
@@ -50,6 +50,17 @@
             </ul>
         </nav>
 
+        <nav id="menu">
+            <ul>
+                <li><a id="logo-menu" href="index.html"><img src="./assets/icons/logo-manicure.png" /></a></li>
+                <li><a href="#inicio">Início</a></li>
+                <li><a href="#cursos">Cursos</a></li>
+                <li><a href="#vantagens">Vantagens</a></li>
+                <li><a href="#conclusao">Conclusão</a></li>
+                <li><a href="#faq">Perguntas Frequentes</a></li>
+            </ul>
+        </nav>
+
         <div id="inicio" class="left">
             <h1>Os <strong>Melhores Cursos de Manicure</strong> Online</h1>
             <p>Se você deseja aprender as habilidades necessárias para se tornar uma <strong>ótima manicure</strong>, esta revisão dos <strong>melhores cursos online de manicure e pedicure</strong> de 2024 é para você.</p>
