:sparkles: feat: Updating the top menu for navigation with the keyboard TAB.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
         <nav id="sidebar-menu">
             <ul>
                 <li><a href="#inicio">Início</a></li>
+                <li><a href="./pages/manicure-guia-completo.html">Blog</a></li>
                 <li><a href="#cursos">Cursos</a></li>
                 <li><a href="#vantagens">Vantagens</a></li>
                 <li><a href="#conclusao">Conclusão</a></li>
@@ -54,10 +55,18 @@
             <ul>
                 <li><a id="logo-menu" href="index.html"><img src="./assets/icons/logo-manicure.png" /></a></li>
                 <li><a href="#inicio">Início</a></li>
-                <li><a href="#cursos">Cursos</a></li>
-                <li><a href="#vantagens">Vantagens</a></li>
-                <li><a href="#conclusao">Conclusão</a></li>
-                <li><a href="#faq">Perguntas Frequentes</a></li>
+                
+                <li class="has-submenu">
+                    <a href="#blog" aria-haspopup="true" aria-expanded="false">Blog</a>
+                    <ul class="submenu">
+                        <li><a href="./pages/manicure-guia-completo.html">Como se tornar uma manicure profissional</a></li>
+                    </ul>
+                </li>
+                
+                <li><a href="../index.html#cursos">Cursos</a></li>
+                <li><a href="../index.html#vantagens">Vantagens</a></li>
+                <li><a href="../index.html#conclusao">Conclusão</a></li>
+                <li><a href="../index.html#faq">Perguntas Frequentes</a></li>
             </ul>
         </nav>
 
