--- a/pages/manicure-guia-completo.html
+++ b/pages/manicure-guia-completo.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../assets/icons/logo-manicure.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../assets/icons/logo-manicure.webp" type="image/x-icon">
 
     <title>Como se tornar uma manicure profissional: Guia completo para quem quer atuar na área</title>
     
@@ -24,14 +24,14 @@
     <meta property="og:url" content="https://melhorescursosdemanicureonline.vercel.app/pages/manicure-guia-completo.html">
     <meta property="og:title" content="Como se tornar uma manicure profissional: Guia completo para quem quer atuar na área">
     <meta property="og:description" content="Descubra tudo sobre a profissão de manicure e pedicure: habilidades essenciais, mercado de trabalho, ferramentas, técnicas populares e dicas para se destacar na área. Aprenda como se tornar uma profissional de sucesso com cursos online e aproveite nossas recomendações para começar sua carreira com o pé direito.">
-    <meta property="og:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure.png">
+    <meta property="og:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://melhorescursosdemanicureonline.vercel.app/pages/manicure-guia-completo.html">
     <meta property="twitter:title" content="Como se tornar uma manicure profissional: Guia completo para quem quer atuar na área">
     <meta property="twitter:description" content="Descubra tudo sobre a profissão de manicure e pedicure: habilidades essenciais, mercado de trabalho, ferramentas, técnicas populares e dicas para se destacar na área. Aprenda como se tornar uma profissional de sucesso com cursos online e aproveite nossas recomendações para começar sua carreira com o pé direito.">
-    <meta property="twitter:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure.png">
+    <meta property="twitter:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure.webp">
 
     <link rel="stylesheet" href="../styles/styles.css">
     <link rel="stylesheet" href="../styles/articles.css">
@@ -53,7 +53,7 @@
 
         <nav id="menu">
             <ul>
-                <li><a id="logo-menu" href="../index.html"><img src="../assets/icons/logo-manicure.png" /></a></li>
+                <li><a id="logo-menu" href="../index.html"><img src="../assets/icons/logo-manicure.webp" /></a></li>
                 <li><a href="#inicio">Início</a></li>
                 
                 <li class="has-submenu">
@@ -76,7 +76,7 @@
             <p>O mercado de manicure e pedicure está em constante crescimento, sendo uma excelente oportunidade para quem deseja empreender ou <strong>se especializar na área da beleza</strong>. Neste guia, vamos explorar tudo o que você precisa saber para começar e se destacar como manicure profissional.</p>
         </div>
         <div class="right">
-            <img src="../assets/images/nails-03.png" alt="Imagem de duas mãos sobrepostas mostrandos as unhas feitas, estlizadas por uma manicure.">
+            <img src="../assets/images/nails.webp" alt="Imagem de duas mãos sobrepostas mostrandos as unhas feitas, estlizadas por uma manicure.">
         </div>
     </header>
     <main>
@@ -96,7 +96,7 @@
             <h3>2. O Mercado de Trabalho</h3>
 
             <div class="article-img-container">
-                <img class="article-img" src="../assets/images/o-que-faz-uma-manicure-e-pedicure.jpg" alt="Foto de um procedimento de manicure, focando nas mãos da cliente."/>
+                <img class="article-img" src="../assets/images/o-que-faz-uma-manicure-e-pedicure.webp" alt="Foto de um procedimento de manicure, focando nas mãos da cliente."/>
             </div>
 
             <p>A área de manicure e pedicure é uma das que mais crescem no Brasil, impulsionada pela valorização da beleza e da autoestima. Hoje, existe uma demanda constante por <a class="cta-link" href="https://sebrae.com.br/sites/PortalSebrae/artigos/voce-sabe-quais-as-competencias-necessarias-para-uma-manicure,04ebfaa1f1d34810VgnVCM100000d701210aRCRD" target="_blank">profissionais qualificados</a>, tanto em salões de beleza quanto em atendimentos domiciliares. O mercado permite flexibilidade, permitindo que você trabalhe como autônoma, em salões ou até abra seu próprio espaço.</p>
@@ -126,7 +126,7 @@
             <h5>4. Como Montar um Kit de Manicure Profissional</h5>
 
             <div class="article-img-container">
-                <img class="article-img" src="../assets/images/como-montar-um-kit-de-manicure-profissional.jpg" alt="Foto de um procedimento de manicure, manicure atendendo a cliente em sua mesa de trabalho." />
+                <img class="article-img" src="../assets/images/como-montar-um-kit-de-manicure-profissional.webp" alt="Foto de um procedimento de manicure, manicure atendendo a cliente em sua mesa de trabalho." />
             </div>
 
             <p>Para começar a atuar, é importante ter um kit com os itens essenciais. Alguns dos principais materiais são:</p>
