--- a/pages/manicure-guia-completo.html
+++ b/pages/manicure-guia-completo.html
@@ -9,8 +9,9 @@
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" rel="stylesheet">
-
+    <link rel="preload" href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" as="style">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap">
+    
     <meta http-equiv="Content-Language" content="pt-BR">
     <meta name="robots" content="index, follow">
 
@@ -33,8 +34,10 @@
     <meta property="twitter:description" content="Descubra tudo sobre a profissão de manicure e pedicure: habilidades essenciais, mercado de trabalho, ferramentas, técnicas populares e dicas para se destacar na área. Aprenda como se tornar uma profissional de sucesso com cursos online e aproveite nossas recomendações para começar sua carreira com o pé direito.">
     <meta property="twitter:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure.webp">
 
-    <link rel="stylesheet" href="../styles/styles.css">
-    <link rel="stylesheet" href="../styles/articles.css">
+    <link rel="preload" href="../styles/styles.css" as="style" onload="this.rel='stylesheet'">
+    <link rel="preload" href="../styles/articles.css" as="style" onload="this.rel='stylesheet'">
+    <noscript><link rel="stylesheet" href="../styles/styles.css"></noscript>
+    <noscript><link rel="stylesheet" href="../styles/articles.css"></noscript>
 </head>
 <body>
     <header>
@@ -186,6 +189,6 @@
     <footer>
         <p>© <span id="ano-frase"></span>. melhorescursosdemanicureonline.vercel.app. Todos os direitos reservados.</p>
     </footer>
-    <script src="../js/scripts.js"></script>
+    <script src="../js/scripts.js" defer></script>
 </body>
 </html>
