:zap: perf: Setting the width and height of images helps to avoid unwanted layout changes during page loading, improving CLS.

--- a/pages/manicure-guia-completo.html
+++ b/pages/manicure-guia-completo.html
@@ -56,7 +56,11 @@
 
         <nav id="menu">
             <ul>
-                <li><a id="logo-menu" href="../index.html"><img src="../assets/icons/logo-manicure.webp" /></a></li>
+                <li>
+                    <a id="logo-menu" href="../index.html">
+                        <img width="500" height="500" src="../assets/icons/logo-manicure.webp" alt="Logomarca do website. Um circulo rosa claro com três unhas feitas em um rosa mais escuro." />
+                    </a>
+                </li>
                 <li><a href="#inicio">Início</a></li>
                 
                 <li class="has-submenu">
@@ -79,7 +83,7 @@
             <p>O mercado de manicure e pedicure está em constante crescimento, sendo uma excelente oportunidade para quem deseja empreender ou <strong>se especializar na área da beleza</strong>. Neste guia, vamos explorar tudo o que você precisa saber para começar e se destacar como manicure profissional.</p>
         </div>
         <div class="right">
-            <img src="../assets/images/nails.webp" alt="Imagem de duas mãos sobrepostas mostrandos as unhas feitas, estlizadas por uma manicure.">
+            <img src="../assets/images/nails.webp" width="375" height="666" alt="Imagem de duas mãos sobrepostas mostrandos as unhas feitas, estlizadas por uma manicure.">
         </div>
     </header>
     <main>
@@ -99,7 +103,7 @@
             <h3>2. O Mercado de Trabalho</h3>
 
             <div class="article-img-container">
-                <img class="article-img" src="../assets/images/o-que-faz-uma-manicure-e-pedicure.webp" alt="Foto de um procedimento de manicure, focando nas mãos da cliente."/>
+                <img class="article-img" width="640" height="427" src="../assets/images/o-que-faz-uma-manicure-e-pedicure.webp" alt="Foto de um procedimento de manicure, focando nas mãos da cliente."/>
             </div>
 
             <p>A área de manicure e pedicure é uma das que mais crescem no Brasil, impulsionada pela valorização da beleza e da autoestima. Hoje, existe uma demanda constante por <a class="cta-link" href="https://sebrae.com.br/sites/PortalSebrae/artigos/voce-sabe-quais-as-competencias-necessarias-para-uma-manicure,04ebfaa1f1d34810VgnVCM100000d701210aRCRD" target="_blank">profissionais qualificados</a>, tanto em salões de beleza quanto em atendimentos domiciliares. O mercado permite flexibilidade, permitindo que você trabalhe como autônoma, em salões ou até abra seu próprio espaço.</p>
@@ -129,7 +133,7 @@
             <h5>4. Como Montar um Kit de Manicure Profissional</h5>
 
             <div class="article-img-container">
-                <img class="article-img" src="../assets/images/como-montar-um-kit-de-manicure-profissional.webp" alt="Foto de um procedimento de manicure, manicure atendendo a cliente em sua mesa de trabalho." />
+                <img class="article-img" width="4016" height="2962" src="../assets/images/como-montar-um-kit-de-manicure-profissional.webp" alt="Foto de um procedimento de manicure, manicure atendendo a cliente em sua mesa de trabalho." />
             </div>
 
             <p>Para começar a atuar, é importante ter um kit com os itens essenciais. Alguns dos principais materiais são:</p>
