:recycle: refactor: Using the media attribute to load it only for tablets and desktops, avoiding causing layout shifts when displayed in larger resolutions.

--- a/pages/manicure-guia-completo.html
+++ b/pages/manicure-guia-completo.html
@@ -92,9 +92,16 @@
                 src="../assets/images/desktop-1440/nails-375-x-686.webp" 
                 width="375" 
                 height="686"
-                srcset="../assets/images/tablet/nails-375-x-494.webp 768w, ../assets/images/desktop-1024/nails-334-x-593.webp 1024w, ../assets/images/desktop-1440/nails-375-x-686.webp"
-                sizes="(max-width: 768px) 375px, (max-width: 1024px) 334px, (max-width: 1440) 375px"
+                srcset="
+                    ../assets/images/tablet/nails-375-x-494.webp 768w, 
+                    ../assets/images/desktop-1024/nails-334-x-593.webp 1024w, 
+                    ../assets/images/desktop-1440/nails-375-x-686.webp 1440w"
+                sizes="
+                    (max-width: 768px) 375px, 
+                    (max-width: 1024px) 334px, 
+                    (max-width: 1440px) 375px"
                 alt="Imagem de duas mãos sobrepostas mostrandos as unhas feitas, estlizadas por uma manicure."
+                media="(min-width: 768px)"
             />
         </div>
     </header>
