:recycle: refactor: Embedding critical fonts and postponing off-screen images ('lazy loading').

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap" as="style">
+    <link rel="preload" href="https://fonts.gstatic.com/s/playfairdisplay/v37/nuFiD-vYSZviVYUb_rj3ij__anPXDTzYgEM86xQ.woff2" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="https://fonts.gstatic.com/s/rubik/v28/iJWKBXyIfDnIV7nBrXyw023e.woff2" as="font" type="font/woff2" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap">
     
     <meta http-equiv="Content-Language" content="pt-BR">
@@ -100,6 +102,7 @@
                     (max-width: 1440px) 375px"
                 alt="Imagem de duas mãos sobrepostas mostrandos as unhas feitas, estlizadas por uma manicure."
                 media="(min-width: 768px)"
+                loading="lazy"
             />
         </div>
     </header>
