:recycle: refactor: Testing adding more sizes to the 'sizes' attribute of the main image.

--- a/pages/manicure-guia-completo.html
+++ b/pages/manicure-guia-completo.html
@@ -95,10 +95,16 @@
                 width="375" 
                 height="686"
                 srcset="
+                    ../assets/images/tablet/nails-375-x-494.webp 768w,
+                    ../assets/images/tablet/nails-375-x-494.webp 768w,
+                    ../assets/images/tablet/nails-375-x-494.webp 768w,
                     ../assets/images/tablet/nails-375-x-494.webp 768w, 
                     ../assets/images/desktop-1024/nails-334-x-593.webp 1024w, 
                     ../assets/images/desktop-1440/nails-375-x-686.webp 1440w"
                 sizes="
+                    (max-width: 320px) 320px,
+                    (max-width: 375px) 375px,
+                    (max-width: 425px) 375px,
                     (max-width: 768px) 375px, 
                     (max-width: 1024px) 334px, 
                     (max-width: 1440px) 375px"
