:recycle: refactor: Refactoring the initial presentation of the site and changing the background image.

--- a/index.html
+++ b/index.html
@@ -83,26 +83,9 @@
             </ul>
         </nav>
 
-        <div id="inicio" class="left">
+        <div id="inicio" class="hero">
             <h1>Os <strong>Melhores Cursos de Manicure</strong> Online</h1>
             <p>Se você deseja aprender as habilidades necessárias para se tornar uma <strong>ótima manicure</strong>, esta revisão dos <strong>melhores cursos online de manicure e pedicure</strong> de 2024 é para você.</p>
-        </div>
-        <div class="right">
-            <img 
-                src="./assets/images/desktop-1440/nails-375-x-686.webp" 
-                width="375" 
-                height="686"
-                srcset="
-                    ./assets/images/tablet/nails-375-x-494.webp 768w, 
-                    ./assets/images/desktop-1024/nails-334-x-593.webp 1024w, 
-                    ./assets/images/desktop-1440/nails-375-x-686.webp 1440w"
-                sizes="
-                    (max-width: 768px) 375px, 
-                    (max-width: 1024px) 334px, 
-                    (max-width: 1440px) 375px"
-                alt="Imagem de duas mãos sobrepostas mostrandos as unhas feitas, estlizadas por uma manicure."
-                media="(min-width: 768px)"
-            />
         </div>
     </header>
     <main>
