--- a/pages/manicure-guia-completo.html
+++ b/pages/manicure-guia-completo.html
@@ -84,27 +84,10 @@
             </ul>
         </nav>
 
-        <div id="inicio" class="left">
+        <div id="inicio" class="hero">
             <h1>Como se tornar uma manicure profissional</h1>
             <p><strong>Guia completo para quem quer atuar na área</strong></p>
             <p>O mercado de manicure e pedicure está em constante crescimento, sendo uma excelente oportunidade para quem deseja empreender ou <strong>se especializar na área da beleza</strong>. Neste guia, vamos explorar tudo o que você precisa saber para começar e se destacar como manicure profissional.</p>
-        </div>
-        <div class="right">
-            <img 
-                src="../assets/images/desktop-1440/nails-375-x-686.webp" 
-                width="375" 
-                height="686"
-                srcset="
-                    ../assets/images/tablet/nails-375-x-494.webp 768w, 
-                    ../assets/images/desktop-1024/nails-334-x-593.webp 1024w, 
-                    ../assets/images/desktop-1440/nails-375-x-686.webp 1440w"
-                sizes="
-                    (max-width: 768px) 375px, 
-                    (max-width: 1024px) 334px, 
-                    (max-width: 1440px) 375px"
-                alt="Imagem de duas mãos sobrepostas mostrandos as unhas feitas, estlizadas por uma manicure."
-                media="(min-width: 768px)"
-            />
         </div>
     </header>
     <main>
