:zap: perf: Adding Preload for the LCP Image.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <meta property="twitter:description" content="Descubra os melhores cursos de manicure online com certificação. Aprenda técnicas profissionais e segredos para se destacar na área. Inscreva-se agora e transforme sua carreira!">
     <meta property="twitter:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure-45-x-45.webp">
     
+    <link rel="preload" href="./assets/images/desktop-1440/img-nails-banner.webp" as="image" type="image/webp">
     <link rel="preload" href="./styles/styles.css" as="style">
     <link rel="stylesheet" href="./styles/styles.css">
     <noscript><link rel="stylesheet" href="./styles/styles.css"></noscript>
