--- a/pages/manicure-guia-completo.html
+++ b/pages/manicure-guia-completo.html
@@ -36,6 +36,7 @@
     <meta property="twitter:description" content="Descubra tudo sobre a profissão de manicure e pedicure: habilidades essenciais, mercado de trabalho, ferramentas, técnicas populares e dicas para se destacar na área. Aprenda como se tornar uma profissional de sucesso com cursos online e aproveite nossas recomendações para começar sua carreira com o pé direito.">
     <meta property="twitter:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure-45-x-45.webp">
 
+    <link rel="preload" href="../assets/images/desktop-1440/img-nails-banner.webp" as="image" type="image/webp">
     <link rel="preload" href="../styles/styles.css" as="style">
     <link rel="preload" href="../styles/articles.css" as="style">
     <link rel="stylesheet" href="../styles/styles.css">
