:recycle: refactor: The styling of titles.

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <p>À medida que a <strong>busca pela beleza</strong> continua crescendo, a <strong>demanda por serviços de manicure</strong> aumenta, fazendo com que essas profissionais se destaquem até internacionalmente. A <strong>indústria de unhas</strong> está crescendo em importância no setor de beleza, contribuindo significativamente para o desenvolvimento do mercado no Brasil.</p>
         <p>A indústria de unhas é valorizada por embelezar mãos e pés, mas essa profissão exige conhecimentos e habilidades que muitas vezes não são ensinados em cursos presenciais, dificultando o aprendizado de quem quer se especializar. Portanto, estudar por meio de <strong>cursos online</strong> fornece o conhecimento necessário para praticar essa atividade, permitindo que os profissionais aprendam e aprimorem suas técnicas. Mas qual é o <strong>melhor curso de manicure online</strong>? Essa é uma das principais perguntas que você deve fazer ao começar a estudar a profissão.</p>
         
-        <h2>Fizemos uma lista com os <strong>principais cursos de manicure online</strong> do mercado</h2>
+        <h2 class="title-box">Fizemos uma lista com os <strong>principais cursos de manicure online</strong> do mercado</h2>
         
         <p>Existem inúmeros <strong>cursos online de manicure</strong> disponíveis na internet, o que torna difícil escolher qual comprar. Como saber qual é a <strong>melhor opção</strong>? Nós te ajudamos!</p>
         <p>Constantemente avaliamos os <strong>melhores cursos do mercado</strong> em nossa oferta de classificação:</p>
