--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <nav id="sidebar-menu">
             <ul>
                 <li><a href="#inicio">Início</a></li>
-                <li><a href="./pages/manicure-guia-completo.html">Blog</a></li>
+                <li><a href="./pages/blog.html">Blog</a></li>
                 <li><a href="#cursos">Cursos</a></li>
                 <li><a href="#vantagens">Vantagens</a></li>
                 <li><a href="#conclusao">Conclusão</a></li>
@@ -72,7 +72,7 @@
                 <li><a href="#inicio">Início</a></li>
                 
                 <li class="has-submenu">
-                    <a href="#blog" aria-haspopup="true" aria-expanded="false">Blog</a>
+                    <a href="./pages/blog.html" aria-haspopup="true" aria-expanded="false">Blog</a>
                     <ul class="submenu">
                         <li><a href="./pages/manicure-guia-completo.html">Como se tornar uma manicure profissional</a></li>
                     </ul>
