--- a/pages/blog.html
+++ b/pages/blog.html
@@ -18,20 +18,20 @@
     <meta name="robots" content="index, follow">
 
     <meta name="author" content="Davi Teixeira Silva"/>
-    <link rel="canonical" href="https://melhorescursosdemanicureonline.vercel.app/pages/manicure-guia-completo.html" />
+    <link rel="canonical" href="https://melhorescursosdemanicureonline.vercel.app/pages/blog.html" />
     <meta name="keywords" content="manicure, como ser uma manicure, melhores cursos de manicure online, curso de manicure certificado, como ser manicure, escola de manicure, aprender manicure, curso de manicure e pedicure, designer de unhas, curso faby cardoso, cutilagem russa, unhas de gel, unhas decoradas, manicure profissional, técnicas de manicure, curso de manicure online gratuito"/>
     <meta name="description" content="Explore o blog completo de manicure e pedicure com artigos, dicas e tendências. Aprenda técnicas, descubra cursos recomendados e aprimore suas habilidades para crescer na área da beleza. Acesse agora e encontre o conteúdo perfeito para você!"/>
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://melhorescursosdemanicureonline.vercel.app/pages/manicure-guia-completo.html">
+    <meta property="og:url" content="https://melhorescursosdemanicureonline.vercel.app/pages/blog.html">
     <meta property="og:title" content="Blog de Manicure e Pedicure | Dicas, Cursos e Tendências para Profissionais">
     <meta property="og:description" content="Explore o blog completo de manicure e pedicure com artigos, dicas e tendências. Aprenda técnicas, descubra cursos recomendados e aprimore suas habilidades para crescer na área da beleza. Acesse agora e encontre o conteúdo perfeito para você!">
     <meta property="og:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure-45-x-45.webp">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://melhorescursosdemanicureonline.vercel.app/pages/manicure-guia-completo.html">
+    <meta property="twitter:url" content="https://melhorescursosdemanicureonline.vercel.app/pages/blog.html">
     <meta property="twitter:title" content="Blog de Manicure e Pedicure | Dicas, Cursos e Tendências para Profissionais">
     <meta property="twitter:description" content="Explore o blog completo de manicure e pedicure com artigos, dicas e tendências. Aprenda técnicas, descubra cursos recomendados e aprimore suas habilidades para crescer na área da beleza. Acesse agora e encontre o conteúdo perfeito para você!">
     <meta property="twitter:image" content="https://melhorescursosdemanicureonline.vercel.app/assets/icons/logo-manicure-45-x-45.webp">
