:wrench: chore: Adjusting links to the correct page.

--- a/pages/manicure-guia-completo.html
+++ b/pages/manicure-guia-completo.html
@@ -96,7 +96,7 @@
     <main>
         <p>A área da beleza está em constante evolução, com a manicure e pedicure sendo uma das áreas mais procuradas. Este guia completo vai ajudar quem deseja ingressar nessa profissão, entender as exigências do mercado, e se destacar com técnicas e especializações adequadas.</p>
 
-        <p>Quer começar sua carreira de manicure? <a class="cta-link" href="../index.html">Confira nosssa lista dos melhores cursos online</a>.</p>
+        <p>Quer começar sua carreira de manicure? <a class="cta-link" href="./melhores-cursos-de-manicure-online.html">Confira nosssa lista dos melhores cursos online</a>.</p>
         
         <p id="mes-ano-frase"></p>
 
@@ -147,7 +147,7 @@
             <p>Pronta para aprender essas técnicas e se tornar uma profissional de destaque? Confira nossa lista dos melhores cursos de manicure online.</p>
 
             <div class="cta-container">
-                <a class="cta-button" target="_blank" href="../index.html">Veja Agora a lista de cursos</a>
+                <a class="cta-button" target="_blank" href="./melhores-cursos-de-manicure-online.html">Veja Agora a lista de cursos</a>
             </div>
 
             <p>Além das especializações técnicas, é essencial ter um bom relacionamento com os clientes e manter uma presença ativa nas redes sociais, onde você pode divulgar seu trabalho e atrair novos clientes. Ferramentas como Instagram e TikTok podem ser ótimas para exibir seus designs e captar mais atenção.</p>
@@ -216,7 +216,7 @@
             <p>Está pronta para transformar sua paixão em profissão? Acesse nossa página de cursos de manicure e comece hoje!</p>
             
             <div class="cta-container">
-                <a class="cta-button" target="_blank" href="../index.html">Veja Agora a lista de cursos</a>
+                <a class="cta-button" target="_blank" href="./melhores-cursos-de-manicure-online.html">Veja Agora a lista de cursos</a>
             </div>
 
             <h5>Referências</h5>
